# CV-project

./: .gitignore  CMakeLists.txt  README.md  YOLO_images.m  YOLO_labels.m  YOLO_train_test_split.m  create_decolored_samples.cpp  find_my_annotations.mlx  idee_progetto_cv.txt
BoW/: BoW.cpp  CMakeLists.txt  cascade.cpp  dictionary.yml
BoW/_cascade/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
BoW/cascade/: cascade.xml  cascade1.xml  cascade_lbp48.xml  cascade_lbp48_30stage.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Ensemble/: CMakeLists.txt
Ensemble/include/: callbacks.h
Ensemble/src/: Util.cpp  main.cpp  snakes.cpp
KMeans/: CMakeLists.txt
KMeans/include/: kmeans.h
KMeans/src/: kmeans.cpp  main.cpp
Mittal_Zisserma_dataset/my_evaluation_code/: my_evaluation.cpp
Mittal_Zisserma_dataset/test_dataset/: README.txt
Mittal_Zisserma_dataset/test_dataset/my_annotations/: VOC2007_100.txt  VOC2007_102.txt  VOC2007_103.txt  VOC2007_104.txt  VOC2007_107.txt  VOC2007_110.txt  VOC2007_112.txt  VOC2007_113.txt  VOC2007_115.txt  VOC2007_118.txt  VOC2007_119.txt  VOC2007_120.txt  VOC2007_122.txt  VOC2007_124.txt  VOC2007_127.txt  VOC2007_128.txt  VOC2007_131.txt  VOC2007_136.txt  VOC2007_137.txt  VOC2007_139.txt  VOC2007_14.txt  VOC2007_140.txt  VOC2007_141.txt  VOC2007_143.txt  VOC2007_145.txt  VOC2007_146.txt  VOC2007_156.txt  VOC2007_158.txt  VOC2007_162.txt  VOC2007_165.txt  VOC2007_167.txt  VOC2007_170.txt  VOC2007_171.txt  VOC2007_176.txt  VOC2007_177.txt  VOC2007_178.txt  VOC2007_179.txt  VOC2007_18.txt  VOC2007_181.txt  VOC2007_182.txt  (+334 more)
Mittal_Zisserma_dataset/training_dataset/my_annotations/: Buffy_1.txt  Buffy_108.txt  Buffy_109.txt  Buffy_11.txt  Buffy_110.txt  Buffy_111.txt  Buffy_114.txt  Buffy_115.txt  Buffy_116.txt  Buffy_12.txt  Buffy_121.txt  Buffy_125.txt  Buffy_127.txt  Buffy_129.txt  Buffy_13.txt  Buffy_130.txt  Buffy_132.txt  Buffy_133.txt  Buffy_134.txt  Buffy_14.txt  Buffy_140.txt  Buffy_143.txt  Buffy_144.txt  Buffy_148.txt  Buffy_154.txt  Buffy_155.txt  Buffy_156.txt  Buffy_157.txt  Buffy_159.txt  Buffy_16.txt  Buffy_160.txt  Buffy_161.txt  Buffy_164.txt  Buffy_165.txt  Buffy_168.txt  Buffy_17.txt  Buffy_170.txt  Buffy_171.txt  Buffy_174.txt  Buffy_177.txt  (+1793 more)
Mittal_Zisserma_dataset/validation_dataset/my_annotations/: Movie_4weds_10.txt  Movie_4weds_101.txt  Movie_4weds_104.txt  Movie_4weds_108.txt  Movie_4weds_111.txt  Movie_4weds_112.txt  Movie_4weds_113.txt  Movie_4weds_114.txt  Movie_4weds_115.txt  Movie_4weds_116.txt  Movie_4weds_117.txt  Movie_4weds_119.txt  Movie_4weds_12.txt  Movie_4weds_121.txt  Movie_4weds_123.txt  Movie_4weds_124.txt  Movie_4weds_126.txt  Movie_4weds_129.txt  Movie_4weds_132.txt  Movie_4weds_134.txt  Movie_4weds_135.txt  Movie_4weds_136.txt  Movie_4weds_140.txt  Movie_4weds_142.txt  Movie_4weds_144.txt  Movie_4weds_146.txt  Movie_4weds_147.txt  Movie_4weds_15.txt  Movie_4weds_150.txt  Movie_4weds_161.txt  Movie_4weds_164.txt  Movie_4weds_165.txt  Movie_4weds_166.txt  Movie_4weds_168.txt  Movie_4weds_169.txt  Movie_4weds_17.txt  Movie_4weds_171.txt  Movie_4weds_172.txt  Movie_4weds_175.txt  Movie_4weds_177.txt  (+304 more)
Mittal_Zisserman_dataset/: Readme.md
Mittal_Zisserman_dataset/my_evaluation_code/: CMakeLists.txt
Mittal_Zisserman_dataset/test_dataset/my_annotations/: VOC2007_1.txt  VOC2007_10.txt  VOC2007_101.txt  VOC2007_105.txt  VOC2007_106.txt  VOC2007_108.txt  VOC2007_109.txt  VOC2007_11.txt  (+439 more)
Morphological/: CMakeLists.txt  comments
Morphological/src/: morphological.cpp
Snakes and GVF/: CMakeLists.txt  gvf.cpp  gvf.h  snake.cpp  snakes.cpp  snakes.h
Yolo/: CMakeLists.txt
Yolo/cfg/: yolov3-custom.cfg
Yolo/src/: main.cpp
dataset_processing/: YOLO_images.m  YOLO_labels.m  YOLO_train_test_split.m
exp/det/: 01.jpg.txt  02.jpg.txt  03.jpg.txt  04.jpg.txt  05.jpg.txt  06.jpg.txt  07.jpg.txt  08.jpg.txt  09.jpg.txt  10.jpg.txt  11.jpg.txt  12.jpg.txt  13.jpg.txt  14.jpg.txt  15.jpg.txt  16.jpg.txt  17.jpg.txt  18.jpg.txt  19.jpg.txt  20.jpg.txt  21.jpg.txt  22.jpg.txt  23.jpg.txt  24.jpg.txt  25.jpg.txt  26.jpg.txt  27.jpg.txt  28.jpg.txt  29.jpg.txt  30.jpg.txt
grabcut&meanshiftDemo/: CMakeLists.txt  Util.cpp  main.cpp  meanshift.cpp
hand_detector/: CMakeLists.txt
hand_detector/cfg/: yolov3-tiny-custom.cfg
hand_detector/src/: detector.cpp  detector.h  tester.cpp
lib/: Util.h  detector.h  snakes.h  util.h
preliminary_tests/WaldBoost/: CMakeLists.txt  waldboost.cpp  waldboost.h
res/cfg/: yolov4-tiny-custom.cfg
res/evaluation_data/: README.txt
src/: create_decolored_samples.cpp  detect.cpp  detect.h  main.cpp  segment.cpp  segment.h
src/lib/: Util.cpp  callbacks.cpp  detector.cpp  snakes.cpp  util.cpp
(+2630 files in other folders)
